--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -44,3 +44,6 @@
 .wui-i-top100-power {
     color: #fd5b0e;
 }
+.wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
+    border-bottom: 1px dotted #cac8b0;
+}
