--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -243,7 +243,12 @@
                     }).show();
                 }else{
                    $('.wa-power').html('帮'+page_owner_name+'助力').on('click', function(){
-                       powerYou();
+                       if(is_powered){
+                           $('.wa-power').html('已帮'+page_owner_name+'助力');
+                           openGuideMask();
+                       }else{
+                           powerYou();
+                       }
                    }).show();
                 }
             }else{
