百宝箱活动的图文预览

--- a/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
+++ b/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
@@ -6,8 +6,9 @@ html{
 html,body{
 	background: #e93131;
 }
-.xui-attentionAlert{
-	display: none;
+
+.xui-attentionAlert a {
+	font-size: 14px;
 }
 .xui-content{
 	background-image: url(/markettools_static/share_red_envelope/img/bg_bottom.png),url(/markettools_static/share_red_envelope/img/bg.jpg);
