--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -26,7 +26,14 @@
       <li class="active">新建微助力</li>
     </ul>
   </div>
-  
+    {% if is_deleted_data %}
+        <div style="background-color: #EAEEF7;" class="clearfix">
+        <div class="xui-emptyBox m10">
+            <img src="/static_v2/img/editor/empty.png">
+            <span class="ml20">您访问的数据已被删除！</span>
+        </div>
+        </div>
+    {% else %}
   <div style="background-color: #EAEEF7;" class="clearfix">
     <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
     </div>
@@ -62,6 +69,7 @@
         {% endif %}
     </div>
   </div>
+{% endif %}
 </div>
 {% endblock %}
 
@@ -74,7 +82,8 @@
       {
         "task": "weizoom-load-termite-components"
       }
-    --> 
+    -->
+{% if not is_deleted_data %}
   {{ '["appkit.page", "appkit.componentadder", "appkit.powermedescription", "appkit.submitbutton"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
   
@@ -285,6 +294,7 @@
       $('.xa-title').text(value);
   });
   </script>
+    {% endif %}
 {% block js %}{% endblock %}
 {% endblock %}
 
