--- a/weapp/apps/app_template/templates/editor/workbench_template.html
+++ b/weapp/apps/app_template/templates/editor/workbench_template.html
@@ -7,54 +7,60 @@ __STRIPPER_TAG__
 __STRIPPER_TAG__
 <% block content-panel %>
 <div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
-  <div class="relative">
-    <ul class="breadcrumb">
-      <li>您当前所在位置</li>
-      <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
-      <li><a href="/apps/{{app_name}}/{{resource.plural_name}}/">{{resource.display_name}}</a></li>
-      <li class="active">新建</li>
-    </ul>
-  </div>
-
-  __STRIPPER_TAG__
-  <div style="background-color: #EAEEF7;" class="clearfix">
-    <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
+    <div class="relative">
+        <ul class="breadcrumb">
+            <li>您当前所在位置</li>
+            <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
+            <li><a href="/apps/{{app_name}}/{{resource.plural_name}}/">{{resource.display_name}}</a></li>
+            <li class="active">新建</li>
+        </ul>
     </div>
-    
-    __STRIPPER_TAG__
-    <div id="phonePanel" class="xui-workbench-phonePanel xui-section fl">
-      <div id="phone" class="xui-phone ">
-          <div id="phoneSkin" class="xui-i-skin">
-            <div class="xui-i-title">
-              <span class="xa-title">微页面标题</span>
-            </div>
-            <iframe name="phoneFrame" id="phoneIFrame" src="/termite2/webapp_design_page/?project_id=<<project_id>>&design_mode=1" height="100%" border="none"></iframe>
-          <div id="phoneSkinCover" class="hide xui-i-skinCover"></div>
+    {% if is_deleted_data %}
+    <div style="background-color: #EAEEF7;" class="clearfix">
+        <div class="xui-emptyBox m10">
+            <img src="/static_v2/img/editor/empty.png">
+            <span class="ml20">您访问的数据已被删除！</span>
         </div>
-      </div>
     </div>
-    <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide" style="margin-bottom: 90px;">
-    </div>
+    {% else %}
 
-    <div class="xui-bottomActionBar xa-stickyBar">
-        <% if not {{resource.lower_name}} %>
-            <button class="xa-save btn btn-primary">保存</button>
-            <button class="xa-preview btn btn-default ml20">预览</button>
-        <% else %>
-            <% if {{resource.lower_name}}.status_text == "未开始" %>
+    __STRIPPER_TAG__
+    <div style="background-color: #EAEEF7;" class="clearfix">
+        <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide"></div>
+    
+        __STRIPPER_TAG__
+        <div id="phonePanel" class="xui-workbench-phonePanel xui-section fl">
+            <div id="phone" class="xui-phone ">
+                <div id="phoneSkin" class="xui-i-skin">
+                    <div class="xui-i-title">
+                        <span class="xa-title">微页面标题</span>
+                    </div>
+                    <iframe name="phoneFrame" id="phoneIFrame" src="/termite2/webapp_design_page/?project_id=<<project_id>>&design_mode=1" height="100%" border="none"></iframe>
+                    <div id="phoneSkinCover" class="hide xui-i-skinCover"></div>
+                </div>
+            </div>
+        </div>
+        <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide" style="margin-bottom: 90px;"></div>
+
+        <div class="xui-bottomActionBar xa-stickyBar">
+            <% if not {{resource.lower_name}} %>
                 <button class="xa-save btn btn-primary">保存</button>
                 <button class="xa-preview btn btn-default ml20">预览</button>
+            <% else %>
+                <% if {{resource.lower_name}}.status_text == "未开始" %>
+                    <button class="xa-save btn btn-primary">保存</button>
+                    <button class="xa-preview btn btn-default ml20">预览</button>
+                <% endif %>
+                <% if {{resource.lower_name}}.status_text == "进行中" %>
+                    进行中，不可更改
+                <% endif %>
+                <% if {{resource.lower_name}}.status_text == "已结束" %>
+                    已结束，不可更改
+                <% endif %>
             <% endif %>
-            <% if {{resource.lower_name}}.status_text == "进行中" %>
-                进行中，不可更改
-            <% endif %>
-            <% if {{resource.lower_name}}.status_text == "已结束" %>
-                已结束，不可更改
-            <% endif %>
-        <% endif %>
+        </div>
     </div>
-
-  </div>
+    {% endif %}
 </div>
 <% endblock %>
 
@@ -70,7 +76,8 @@ __STRIPPER_TAG__
       {
         "task": "weizoom-load-termite-components"
       }
-    --> 
+    -->
+{% if not is_deleted_data %}
   << '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_termite_components|safe >>
   <!-- *end_prunt_task* -->
 
@@ -281,5 +288,6 @@ __STRIPPER_TAG__
           }));
     });
   </script>
+{% endif %}
 <% block js %><% endblock %>
 <% endblock %>
