--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -13,29 +13,35 @@
 
 {% block content-panel %}
 <div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
-  <div class="relative">
-    <ul class="breadcrumb">
-      <li>您当前所在位置</li>
-      <li><a href="/termite2/pages/">百宝箱</a></li>
-      <li><a href="/apps/survey/surveies/">用户调研</a></li>
-      <li class="active">新建调研</li>
-    </ul>
-  </div>
-  
-  <div style="background-color: #EAEEF7;" class="clearfix">
-    <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
+    <div class="relative">
+        <ul class="breadcrumb">
+            <li>您当前所在位置</li>
+            <li><a href="/termite2/pages/">百宝箱</a></li>
+            <li><a href="/apps/survey/surveies/">用户调研</a></li>
+            <li class="active">新建调研</li>
+        </ul>
     </div>
-    
-    <div id="phonePanel" class="xui-workbench-phonePanel xui-section fl">
-      <div id="phone" class="xui-phone ">
-          <div id="phoneSkin" class="xui-i-skin">
-            <div class="xui-i-title">
-              <span class="xa-title">微页面标题</span>
-            </div>
-            <iframe name="phoneFrame" id="phoneIFrame" src="/termite2/webapp_design_page/?project_id={{project_id}}&design_mode=1" height="100%" border="none"></iframe>
-          <div id="phoneSkinCover" class="hide xui-i-skinCover"></div>
+    {% if is_deleted_data %}
+    <div style="background-color: #EAEEF7;" class="clearfix">
+        <div class="xui-emptyBox m10">
+            <img src="/static_v2/img/editor/empty.png">
+            <span class="ml20">您访问的数据已被删除！</span>
         </div>
-      </div>
+    </div>
+    {% else %}
+    <div style="background-color: #EAEEF7;" class="clearfix">
+    <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide"></div>
+
+    <div id="phonePanel" class="xui-workbench-phonePanel xui-section fl">
+        <div id="phone" class="xui-phone ">
+            <div id="phoneSkin" class="xui-i-skin">
+                <div class="xui-i-title">
+                    <span class="xa-title">微页面标题</span>
+                </div>
+                <iframe name="phoneFrame" id="phoneIFrame" src="/termite2/webapp_design_page/?project_id={{project_id}}&design_mode=1" height="100%" border="none"></iframe>
+                <div id="phoneSkinCover" class="hide xui-i-skinCover"></div>
+            </div>
+        </div>
     </div>
     <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide" style="margin-bottom: 90px;">
     </div>
@@ -56,7 +62,8 @@
             {% endif %}
           {% endif %}
         </div>
-  </div>
+    </div>
+{% endif %}
 </div>
 {% endblock %}
 
@@ -66,9 +73,11 @@
       {
         "task": "weizoom-load-termite-components"
       }
-    -->  
+    -->
+{% if not is_deleted_data %}
   {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.qa", "appkit.selection", "appkit.textlist", "appkit.submitbutton","appkit.uploadimg"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
+
   
   <script type="text/javascript">
     W.uid = {{ user.id }};
@@ -264,5 +273,6 @@
     });
   </script>
 {% block js %}{% endblock %}
+{% endif %}
 {% endblock %}
 
