--- a/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
@@ -21,7 +21,14 @@
       <li class="active">新建投票</li>
     </ul>
   </div>
-  
+{% if is_deleted_data %}
+    <div style="background-color: #EAEEF7;" class="clearfix">
+    <div class="xui-emptyBox m10">
+        <img src="/static_v2/img/editor/empty.png">
+        <span class="ml20">您访问的数据已被删除！</span>
+    </div>
+    </div>
+{% else %}
   <div style="background-color: #EAEEF7;" class="clearfix">
     <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
     </div>
@@ -57,6 +64,7 @@
           {% endif %}
         </div>
   </div>
+{% endif %}
 </div>
 {% endblock %}
 
@@ -66,7 +74,8 @@
       {
         "task": "weizoom-load-termite-components"
       }
-    -->  
+    -->
+{% if not is_deleted_data %}
   {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.selection", "appkit.textlist", "appkit.submitbutton"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
   
@@ -264,6 +273,7 @@
           }));
     });
   </script>
+{% endif %}
 {% block js %}{% endblock %}
 {% endblock %}
 
