--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -96,7 +96,6 @@
                 <a data-theme="x" href="/workbench/jqm/preview/?{{homepage_workspace_info|safe}}" data-role="button" class="xui-btn mt20">返回首页</a>
             </div>
         {% else %}
-            {% if user.is_from_weixin %}
             <div data-ui-role="attentionAlert" class="xui-attentionAlert {% if in_design_mode %}none{% endif %}" 
                 {% if not request.member.is_subscribed %}
                     data-is-show-button="true"
@@ -107,7 +106,6 @@
                 data-id="{{request.webapp_owner_id}}"
                 data-qrcode-image="{{ request.webapp_owner_info.qrcode_img }}">
             </div>
-            {% endif %}
 
             {% block content-panel %}{% endblock %}
         {% endif %}
@@ -547,7 +545,8 @@
             });
         </script>
         {% endif %}
-
-        {% block js %}{% endblock %}
+        {% if not is_deleted_data %}
+            {% block js %}{% endblock %}
+        {% endif %}
     </body>
 </html>
