--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -886,6 +886,9 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-products-original .xui-inner-img{
     display: block;
     overflow: hidden;
+    background: #f5f5f5;
+    padding-bottom: 100%;
+    height:0;
 }
 .xui-products-original .xui-inner-li a{
     padding: 5px;
