--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -28,9 +28,10 @@ hr{
 .wui-powerme-container .wui-i-body div{
     font-family: "黑体";
 }
-.wui-powerme-container .wui-i-body .wui-i-btngroup button{
+.wui-powerme-container .wui-i-body .wui-i-btngroup p, .wui-powerme-container .wui-i-body .wui-i-btngroup button{
     width: 70%;
     height: 34px;
+    line-height: 34px;
     border: none;
     color: white;
     font-size: 1rem;
@@ -64,11 +65,11 @@ hr{
     padding: 7px 5px;
     color: white;
     border-radius: 2px;
-    font-family: '微软雅黑';
+    font-family: "Arial", "黑体";
 }
 .wui-powerme-container .wui-i-states ul li{
     text-align: left;
-    margin: 16px 10px 0;
+    padding: 16px 10px 0;
 }
 .wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
     border-bottom: 1px dotted #ffffff;
@@ -184,4 +185,15 @@ hr{
 }
 .wui-powerme-container .wui-i-btngroup{
     margin-top: 15px;
+}
+.mobile_solution{
+    display: -webkit-inline-box;
+    overflow : hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    max-width: 160px;
+    line-height: 35px;
+    font-family: 微软雅黑;
+    height: 35px;
 }
