微助力： 1、增加回复语提示 2、调整手机端弹窗样式 3、调整各项间距

--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -64,11 +64,11 @@ hr{
     padding: 7px 5px;
     color: white;
     border-radius: 2px;
-    font-family: '微软雅黑';
+    font-family: "Arial", "黑体";
 }
 .wui-powerme-container .wui-i-states ul li{
     text-align: left;
-    margin: 16px 10px 0;
+    padding: 16px 10px 0;
 }
 .wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
     border-bottom: 1px dotted #ffffff;
