--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -126,7 +126,7 @@
             <span class="wa-myrange">我的排名: <b>{% if current_member_rank_info %}{{ current_member_rank_info.rank }}{% else %}无{% endif %}</b></span>
         <span class="wa-mypower">我的助力值: <b>{% if current_member_rank_info %}{{ current_member_rank_info.power }}{% else %}0{% endif %}</b></span>
         </div>
-        <div style="float: right;">
+        <div style="float: right;margin-right: 25px">
         <span class="wa-totalcount">参与人数: <b>{{ total_participant_count }}</b></span>
         </div>
     </div>
@@ -287,7 +287,7 @@
                 $('.wa-using').text(using_msg).on('click', function(){
                     $attention.find('.xa-attention-tip').hide();
                     $attention.find('.xa-attention-reply').children().first().html("2.回复：“");
-                    openMemberMask();
+                    openGuestMask();
                 }).show();
             }
         }
