[朱天琦][f_mall_5976]tell me why6

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -248,6 +248,7 @@
 
         <script>
             webStorageProbe();
+            JSAnalysis('test','test');
         </script>
 
         {% block js %}{% endblock %}
