修复百宝箱内活动删除后的异常

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -544,7 +544,8 @@
             });
         </script>
         {% endif %}
-
-        {% block js %}{% endblock %}
+        {% if not is_deleted_data %}
+            {% block js %}{% endblock %}
+        {% endif %}
     </body>
 </html>
