--- a/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
+++ b/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
@@ -3,7 +3,7 @@
 html{
 	font-family:Arial,Tahoma,Roboto,"Droid Sans","Helvetica Neue","Droid Sans Fallback","Heiti SC","Hiragino Sans GB",'Microsoft Yahei',Simsun,sans-serif;
 }
-html,body{
+.xui-wrap{
 	background: #e93131;
 }
 
