--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -253,11 +253,11 @@
             var $attention = $('.xa-attention-guest');
             if(W.isMember){
                 if(is_powered){
-                    $('.wa-power').html('已帮'+page_owner_name+'助力').on('click', function(){
+                    $('.wa-power').html('已帮'+page_owner_name+'助力').addClass('mobile_solution').on('click', function(){
                         openGuideMask();
                     }).show();
                 }else{
-                   $('.wa-power').html('帮'+page_owner_name+'助力').on('click', function(){
+                   $('.wa-power').html('帮'+page_owner_name+'助力').addClass('mobile_solution').on('click', function(){
                        if(is_powered){
                            openGuideMask();
                        }else{
@@ -267,14 +267,14 @@
                 }
             }else{
                 if(is_powered){
-                    $('.wa-power').html('已帮'+page_owner_name+'助力').on('click', function(){
+                    $('.wa-power').html('已帮'+page_owner_name+'助力').addClass('mobile_solution').on('click', function(){
                         $attention.find('.xa-attention-tip').show();
                         $attention.find('img').attr('src', qrcode_url);
                         $attention.find('.xa-attention-reply').children().first().html("3.回复：“");
                         openGuestMask();
                     }).show();
                 }else{
-                    $('.wa-power').html('帮'+page_owner_name+'助力').on('click', function(){
+                    $('.wa-power').html('帮'+page_owner_name+'助力').addClass('mobile_solution').on('click', function(){
                         powerYou();
                         $attention.find('.xa-attention-tip').show();
                         $attention.find('img').attr('src', new_qrcode_url);
