--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -28,7 +28,7 @@
             <div class="wui-i-btngroup">
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
                 <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
-                <button class="wui-i-btn-power wa-power wui-hide mobile_solution">帮助力</button>
+                <button class="wui-i-btn-power wa-power wui-hide">帮助力</button>
                 <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
             <div class="wui-i-description xa-description cl">
