[朱天琦][b_mall_5994]修复非会员访问领取优惠券页面

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -2303,6 +2303,10 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-getCouponPage .xui-goShopping-btn,.xui-getCouponPage .xui-myCoupon-btn{
     background: transparent;
 }
+.xui-getCouponPage .xui-goShopping-btn,.xui-getCouponPage .xui-myCoupon-btn-disable{
+    background:#a19fa0;
+}
+
 /*
  * mall: 购物车页面样式
  */
