[X-Ray][b_mall_5839]商品列表缩略图使用线上又拍云名字空间

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -49,7 +49,7 @@
             >
                 <a href='./?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{product.id}}'>
                     <div class="xui-inner-img">
-                    {% ifequal product.thumbnails_url|truncatechars:22 'http://weappimgtest...'%}
+                    {% ifequal product.thumbnails_url|truncatechars:18 'http://weappimg...'%}
                         <img src="{{ product.thumbnails_url }}!list">
                     {% else %}
                         <img src="{{ product.thumbnails_url }}">
