--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -146,14 +146,14 @@
     <div class="xui-attention xa-attention-guest none">
         <div class="xui-twoDimensionBox">
             <div class="xa-attention-tip-one" style="margin-top: 32px;">
-                <p>1.长按二维码关注“</p><p class="wui-win-font-color">{{ mpUserPreviewName }}</p><p>”公众号</p>
+                <p>1.长按二维码关注</p><p class="wui-win-font-color">“{{ mpUserPreviewName }}”</p><p>公众号</p>
             </div>
             <img src="{% if params_qrcode_url %}{{params_qrcode_url}}{% else %}{{ request.webapp_owner_info.qrcode_img }}{% endif %}" alt="" class="xui-twoDimension">
             <div class="xa-attention-tip" style="display:none">
                 <p class="wui-win-font-color">2.关注公众号后即可为好友助力值+1</p>
             </div>
             <div class="xa-attention-reply" style="margin-top: 5px;">
-                <p>2.回复：“</p><div class="wui-win-font-color" style="display: inline;">{{ reply_content|safe }}</div><p>”，即可参加活动</p>
+                <p>2.回复：</p><div class="wui-win-font-color" style="display: inline;">“{{ reply_content|safe }}”，</div><p>即可参加活动</p>
             </div>
             <div class="xui-closeBtn xa-closeBtn"></div>
         </div>
@@ -270,7 +270,7 @@
                     $('.wa-power').html('已帮'+page_owner_name+'助力').addClass('mobile_solution').on('click', function(){
                         $attention.find('.xa-attention-tip').show();
                         $attention.find('img').attr('src', qrcode_url);
-                        $attention.find('.xa-attention-reply').children().first().html("3.回复：“");
+                        $attention.find('.xa-attention-reply').children().first().html("3.回复：");
                         openGuestMask();
                     }).show();
                 }else{
@@ -278,7 +278,7 @@
                         powerYou();
                         $attention.find('.xa-attention-tip').show();
                         $attention.find('img').attr('src', new_qrcode_url);
-                        $attention.find('.xa-attention-reply').children().first().html("3.回复：“");
+                        $attention.find('.xa-attention-reply').children().first().html("3.回复：");
                         openGuestMask();
                     }).show();
                 }
@@ -294,7 +294,7 @@
                 $('.wa-using').text(using_msg).on('click', function(){
                     $attention.find('img').attr('src', qrcode_url);
                     $attention.find('.xa-attention-tip').hide();
-                    $attention.find('.xa-attention-reply').children().first().html("2.回复：“");
+                    $attention.find('.xa-attention-reply').children().first().html("2.回复：");
                     openGuestMask();
                 }).show();
             }
