--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -3,7 +3,7 @@
 
 
 {% block content-panel %}
-<div class="xui-userCenterPage xui-page wa-shopBottomNavPage">
+<div class="xui-userCenterPage xui-page wa-shopBottomNavPage xa-page">
     {% if not is_weizoom_mall %}
     <!-- 全局导航 -->
     <div class="wui-globalNav xa-globalNav"{% if not global_navbar %} data-ui-role="global-nav"{% endif %} data-member="{% if cur_request_member %}true{% else %}false{% endif %}"></div>
