[X-Ray][b_mall_6002]页面问题【非会员-显示引导关注黄条】-1.获取优惠券页面，2.我的优惠券页面，3.个人中心页面;顺道儿解决"我的优惠券"滚动问题

--- a/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
+++ b/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
@@ -11,7 +11,7 @@ html,body{
 {% endblock %}
 
 {% block content-panel %}
-<div class="xui-getCouponPage m10">
+<div class="xui-getCouponPage m10 xa-page">
 	<div class="xui-coupon">
 		<div class="xui-item tc xui-title-section">{{ rule.name }}</div>
 		<div class="xui-item tc xui-money-section">
