--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -1,7 +1,7 @@
 {% extends "webapp_content_base.html" %}
 {% load common_tag %}
 {% block content-panel %}
-<div id='product_list_contain' data-role="page" data-theme="x" data-title="商品列表" class="xui-productsList-page">
+<div id='product_list_contain' data-title="商品列表" class="xui-productsList-page xa-page">
 
     
     {% if global_navbar == None %}
@@ -42,31 +42,26 @@
     </div>
     {% endif %}
     {% if products %}
-    <div data-role="content" data-theme="x">
-        <div class="xui-hlist xui-hlist-cell-2 xui-products-original" id="xa-wrapper">
-            <ul data-role="listview" data-theme="x" data-icon="false">
-                {% for product in products %}
-                <li id="{{product.id}}" class="xa-product xui-inner-li xt-oneProduct {% if product.is_member_product %}xa-member-product{% endif %}"
-                    data-product-promotion='{{product.promotion_js}}' data-product-price="{{product.display_price}}"
-                >
-                    <a href='./?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{product.id}}'>
-                        <div class="xui-inner-img">
-                        {% ifequal product.thumbnails_url|truncatechars:18 'http://weappimg...'%}
-                            <img src="{{ product.thumbnails_url }}!list">
-                        {% else %}
-                            <img src="{{ product.thumbnails_url }}">
-                        {% endifequal%}
-                        </div>
-                        <h3 class="xt-productName">{{ product.name }}</h3>
-                        <p class="xt-productPrice">￥{{ product.display_price | floatformat:2}}</p>
+        <ul class="xui-products-original clearfix">
+            {% for product in products %}
+            <li id="{{product.id}}" class="xa-product xui-inner-li xt-oneProduct {% if product.is_member_product %}xa-member-product{% endif %}"
+                data-product-promotion='{{product.promotion_js}}' data-product-price="{{product.display_price}}"
+            >
+                <a href='./?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{product.id}}'>
+                    <div class="xui-inner-img">
+                    {% ifequal product.thumbnails_url|truncatechars:18 'http://weappimg...'%}
+                        <img src="{{ product.thumbnails_url }}!list">
+                    {% else %}
+                        <img src="{{ product.thumbnails_url }}">
+                    {% endifequal%}
+                    </div>
+                    <h3 class="xt-productName">{{ product.name }}</h3>
+                    <p class="xt-productPrice">￥{{ product.display_price | floatformat:2}}</p>
 
-                    </a>
-                </li>
-                {% endfor %}
-            </ul>
-            
-        </div>
-    </div>
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
     {% else %}
         <div class="xui-empty-box"><img src="/static_v2/img/webapp/mall/none.jpg" alt=""></div>
         <a class="xui-goShopping-btn" href='/termite/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=homepage'>去逛逛</a>
@@ -78,6 +73,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
     // 计算列表页面价钱
+    
     $('.xui-products-original').calculProductMemberPriceOrPromotionPrice({
         updateProductPrice: function(event, data){
             var token = $.cookie('current_token');
@@ -166,10 +162,6 @@ $(document).ready(function() {
         }
     });
 */
-    var $img = $('.xui-inner-img img');
-    var imgHeight = $img.css('width');
-    $img.css('height', imgHeight);
-
     // 默认开启店铺导航app样式，加padding防止遮盖内容
     var slideBar = $('.xui-globalSideBar');
     if(slideBar.length > 0){
