--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -89,11 +89,15 @@
     .xui-attention{
         position: fixed;
         top: 12%;
-        z-index: 10001;
         width: 100%;
-    }
-    .xa-attention-member{
         text-align: center;
+        z-index: 10001;
+    }
+    .xa-attention-member .xui-twoDimensionBox{
+        text-align: center;
+    }
+    .xa-attention-guest .xui-twoDimensionBox{
+        text-align: left;
     }
 
     .xui-attention .xui-twoDimensionBox {
